--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
----
-layout: index
----
-
-<ul class="posts">
-  {% for post in site.posts %}
-  <li>
-    <small class="datetime muted" data-time="{{ post.date }}">{{ post.date | date_to_string }} </small>
-    <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
-  </li>
-  {% endfor %}
-</ul>
+Hi there, this Puran Zhang. Welcome!
