--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <body>
-  #Hi there.
-  </body>
+<head>
+	<title>Ollie Bike Sharing</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+	<h1>You're Building a Website!</h1>
+</body>
 </html>
