--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ollie Bike Sharing</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-  <div class="container">
-  <div class="nav">
-  <h2>Ollie</h2>
-  <ul>
-    <li>sign up</li>
-    <li>search bikes</li>
-    <li>reserve a bike</li>
-    <li>about us</li>
-  </ul>
-</div>
-<div class="main">
-  <h1>Ollie Bike Sharing</h1>
-  <h3>Share Your Pedals with the World.</h3>
-  <p>Easy-to-use, free bike sharing now available in 27 cities.</p>
-  <video width="320px" height="240" controls>
-    <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-  </video>
-</div>	
-</div>
-</body>
-</html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<title>Yiwen Luo - 罗轶闻</title>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="./main.css" />
+		<script type="text/javascript">
+		(function () {
+			var COLORS = ["red", "orange", "green", "blue", "purple", "brown"]
+			function randomLinkColor() {
+				var index = Math.floor(Math.random() * COLORS.length);
+				var links = document.getElementsByTagName("a");
+				for (var i=0; i<links.length; i++) {
+					links[i].style.color = COLORS[index];
+				}
+			}
+			window.onload = randomLinkColor;
+		})();
+		</script>
+	</head>
+	<body>
+		<div class="container">
+			<div class="content">
+				<h1>Yiwen Luo</h1> 
+				<div class="social-container">
+					<a class="fa fa-twitter" target="_blank" href="https://twitter.com/louisyiwenluo"></a>
+					<a class="fa fa-github" target="_blank" href="https://github.com/yiwenluo"></a>
+					<a class="fa fa-linkedin" target="_blank" href="https://www.linkedin.com/in/yiwen-luo-15777913"></a>
+					<a class="fa fa-weibo" target="_blank" href="http://weibo.com/yiwenlouispig"></a>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
