--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Puran Zhang</title>
-  <link rel="stylesheet" href="/assets/site.css?t=1450775550">
-  <link rel="stylesheet" href="/assets/font.css?t=1437645997">
+  <link rel="stylesheet" href="site.css?t=1450775550">
+  <link rel="stylesheet" href="font.css?t=1437645997">
   
 <style>
 button {
