--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="site.css?t=1450775550">
   <link rel="stylesheet" href="font.css?t=1437645997">
 
-  <link rel="icon" href="http://puranzhang.github.io/favicon.ico" />
+  <link rel="icon" href="http://puranzhang.github.io/safari-pinned-tab.svg" />
 
 <style>
 button {
