--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
   <title>Puran Zhang</title>
   <link rel="stylesheet" href="site.css?t=1450775550">
   <link rel="stylesheet" href="font.css?t=1437645997">
-
-  <link rel="icon" href="http://puranzhang.github.io/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" href="http://puranzhang.github.io/木勺logo.png" />
   
 <style>
 button {
