--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@ $('#introTwo').html("<h3>this is 4.5</h3>");
 
 <table id = "questions" style="width:100%">
   <tr>
-    <td><button input id="purePlay" type="button" onclick="purePlay()">我。</button></td>
+    <td><button input id="purePlay" type="button" onclick="purePlay()">你好</button></td>
   </tr>
   <tr>
-    <td><button input id="pokeDex" type="button" onclick="pokeDex()">是。</button></td>
+    <td><button input id="pokeDex" type="button" onclick="pokeDex()">我是</button></td>
   </tr>
   <tr>
-    <td><button input id="takeGym" type="button" onclick="takeGym()">张</button></td>
+    <td><button input id="takeGym" type="button" onclick="takeGym()">张 •</button></td>
   </tr>
   <tr>
     <td><button input id="useItems" type="button" onclick="useItems()">普然</button></td>
