--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@ $('#introTwo').html("<h3>this is 4.5</h3>");
   <tr>
     <td><button input id="pokeDex" type="button" onclick="pokeDex()">construction</button></td>
   </tr>
-<!--
+
   <tr>
-    <td><button input id="takeGym" type="button" onclick="takeGym()">张 •</button></td>
+    <td><button input id="takeGym" type="button" onclick="takeGym()">resume</button></td>
   </tr>
-  <tr>
+<!--   <tr>
     <td><button input id="useItems" type="button" onclick="useItems()">普然</button></td>
-  </tr>
--->
+  </tr> -->
+
 </table>
 
 <div id = "introduction">
