update resume link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ button {
 }
 </style>
 
+<!--
 <script>
 function purePlay(){
 	$('#introTwo').empty();
@@ -182,6 +183,7 @@ $('#introTwo').html("<h3>this is 4.5</h3>");
 }
 
 </script>
+-->
 
 </head>
   
@@ -206,7 +208,7 @@ $('#introTwo').html("<h3>this is 4.5</h3>");
   </tr>
 
   <tr>
-    <td><button input id="takeGym" type="button" onclick="takeGym()">resume</button></td>
+    <td><button input id="takeGym" type="button" onclick= "location.href='http://puranzhang.github.io/files/resume.pdf'">resume</button></td>
   </tr>
 <!--   <tr>
     <td><button input id="useItems" type="button" onclick="useItems()">普然</button></td>
