--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="bigbox">
 
     <center>
-    <a href="http://puranzhang.me"><img src="/materials/Puran%20Zhang.svg" width="220"></a><br>
+    <a href="http://puranzhang.me"><img src="/materials/Puran%20Zhang@2x.png" width="220"></a><br>
      <nav>
        <ul class="dropdown">
          <li><a class="btn" href="http://puranzhang.me/files/resume.pdf">Resume</a></li>
@@ -27,8 +27,8 @@
     <hr>
     <br>
 
-<h2><a href="https://www.mowglii.com/snk">Keep Talking <span class="lighttext">or Explodes</span></a></h2>
-<a href="https://www.mowglii.com/snk"><div id="snkbanner"></div></a>
+<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2>
+<a href="https://github.com/puranzhang/chat-app"><div id="ktoebanner"></div></a>
 
 <br>
 <br>
