--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <title>Puran Zhang</title>
 
 
-<link rel="shortcut icon" href="http://puranzhang.me/materials/木勺logo.png">
+<link rel="shortcut icon" href="http://puranzhang.me/static/木勺logo.png">
 <link href="style.css" rel="stylesheet" type="text/css">
 
 </head><body>
   <div id="bigbox">
 
     <center>
-    <a href="http://puranzhang.me"><img src="/materials/Puran%20Zhang@2x.png" width="220"></a><br>
+    <a href="http://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
      <nav>
        <ul class="dropdown">
          <li><a class="btn" href="http://puranzhang.me/files/resume.pdf">Resume</a></li>
