--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0024)https://www.mowglii.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -8,19 +7,20 @@
 <title>Puran Zhang</title>
 
 
-<link rel="shortcut icon" href="http://puranzhang.me/static/木勺logo.png">
+<link rel="shortcut icon" href="https://puranzhang.me/static/木勺logo.png">
 <link href="style.css" rel="stylesheet" type="text/css">
-
-</head><body>
+<script src='https://www.google.com/recaptcha/api.js'></script>
+</head>
+<body>
   <div id="bigbox">
 
     <center>
-    <a href="http://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
+    <a href="https://puranzhang.me"><img src="/static/Puran%20Zhang.svg" width="220"></a><br>
      <nav>
        <ul class="dropdown">
-         <li><a class="btn" href="http://puranzhang.me/files/resume.pdf">Resume</a></li>
+         <li><a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a></li>
          <li><a class="btn" href="https://github.com/puranzhang">Github</a></li>
-         <li><a class="btn" href="mailto:pz75@cornell.edu">Contact</a></li>
+         <li><a class="btn" href="mailto:pz75+web@cornell.edu">Contact</a></li>
        </ul>
      </nav>
     </center>
