--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="bigbox">
 
     <center>
-    <a href="https://puranzhang.me"><img src="/static/Puran%20Zhang.svg" width="220"></a><br>
+    <a href="https://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
      <nav>
        <ul class="dropdown">
          <li><a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a></li>
