update RPG banner

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <br>
 <br>
 
-<h2><a href="https://www.mowglii.com/itsycal">Itsycal <span class="lighttext">for Mac</span></a></h2>
-<a href="https://www.mowglii.com/itsycal"><div id="itsycalbanner"></div></a>
+<h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a></h2>
+<a href="https://github.com/puranzhang/game_database"><div id="rpgbanner"></div></a>
 
 <br>
 <!--
