--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <ul class="dropdown">
          <li><a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a></li>
          <li><a class="btn" href="https://github.com/puranzhang">Github</a></li>
-         <li><a class="btn" href="mailto:pz75+web@cornell.edu">Contact</a></li>
+         <li><a class="btn" href="mailto:pz75@cornell.edu">Contact</a></li>
        </ul>
      </nav>
     </center>
