--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Puran Zhang's web.">
-
-<title>Puran Zhang</title>
-
-<link rel="shortcut icon" href="https://puranzhang.me/static/木勺logo.png">
-<link href="style.css" rel="stylesheet" type="text/css">
+<html>
+<head>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<meta content="Puran Zhang's web." name="description">
+	<title>Puran Zhang</title>
+	<link href="https://puranzhang.me/static/木勺logo.png" rel="shortcut icon">
+	<!-- Style is credited to https://www.mowglii.com -->
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
-    
 <body>
-  <div id="bigbox">
-
-    <center>
-    <a href="https://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
-     <nav>
-       <ul class="dropdown">
-         <li><a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a></li>
-         <li><a class="btn" href="https://github.com/puranzhang">Github</a></li>
-         <li><a class="btn" href="mailto:pz75@cornell.edu">Contact</a></li>
-       </ul>
-     </nav>
-    </center>
-    <hr>
-    <br>
-
-<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2>
-<a href="https://github.com/puranzhang/chat-app"><div id="ktoebanner"></div></a>
-
-<br>
-<br>
-
-<h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a></h2>
-<a href="https://github.com/puranzhang/game_database"><div id="rpgbanner"></div></a>
-
-<br>
+	<div id="bigbox">
+		<center>
+			<a href="https://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
+			<nav>
+				<ul class="dropdown">
+					<li>
+						<a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a>
+					</li>
+					<li>
+						<a class="btn" href="https://github.com/puranzhang">Github</a>
+					</li>
+					<li>
+						<a class="btn" href="mailto:pz75@cornell.edu">Contact</a>
+					</li>
+				</ul>
+			</nav>
+		</center>
+		<hr>
+		<br>
 <!--
+        <p>
+            This is Puran. I'm currently finishing my master program in Information Science at Cornell University.
+        </p>
+        <br>
+-->
+        
+		<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2><a href="https://github.com/puranzhang/chat-app">
+		<div id="ktoebanner"></div></a><br>
+		<br>
+		<h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a></h2><a href="https://github.com/puranzhang/game_database">
+		<div id="rpgbanner"></div></a><br>
+		<!--
 <br/>
 <h2><a href="/lonelyheart">Lonely Heart <span class="lighttext">for Chrome</span></a></h2>
 <a href="/lonelyheart"><div id="lonelyheartbanner"></div></a>
 -->
-
-
-    <br>
-    <!--
+		<br>
+		<!--
     <hr/>
     <p><a class="btn" href="/contact">Contact</a></p>
     -->
-  </div>
-  <br>
-
-
-</body></html>
+	</div><br>
+</body>
+</html>
