--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 	<title>Puran Zhang</title>
 	<link href="https://puranzhang.me/static/木勺logo.png" rel="shortcut icon">
 	<!-- Style is credited to https://www.mowglii.com -->
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="bigbox">
@@ -15,6 +15,9 @@
 			<a href="https://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
 			<nav>
 				<ul class="dropdown">
+					<li>
+						<a class="btn" href="/About">About</a>
+					</li>
                     <li>
 						<a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a>
 					</li>
@@ -23,9 +26,6 @@
 					</li>
 					<li>
 						<a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
-					</li>
-                    <li>
-						<a class="btn" href="/about">About</a>
 					</li>
 <!--
                     <li>
@@ -36,28 +36,17 @@
 			</nav>
 		</center>
 		<hr>
-        
-<!--
+        <br>
+        <h2 style="color: #68d">About <span class="lighttext">me</span></h2>
         <p>
             This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.
         </p>
         <p>
             I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a> and yet can't resist it. Please reach me at <em>pz75 at cornell dot edu</em>.
         </p>
--->
-        
-<!--        <hr>-->
-        <br>
-		<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2><a href="https://github.com/puranzhang/chat-app">
-		<div id="ktoebanner"></div></a><br>
-		<br>
-		<h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a></h2><a href="https://github.com/puranzhang/game_database">
-		<div id="rpgbanner"></div></a><br>
-		<br>
-		<!--
-    <hr/>
-    <p><a class="btn" href="/contact">Contact</a></p>
-    -->
+        <p style="text-align: center;">
+            &bull; &nbsp; &bull; &nbsp; &bull;
+        </p>
 	</div><br>
 </body>
 </html>
