--- a/about/index.html
+++ b/about/index.html
@@ -5,18 +5,18 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta content="Puran Zhang's web." name="description">
 	<title>Puran Zhang</title>
-	<link href="https://puranzhang.me/static/木勺logo.png" rel="shortcut icon">
+	<link href="../static/木勺logo.png" rel="shortcut icon">
 	<!-- Style is credited to https://www.mowglii.com -->
-	<link href="../style.css" rel="stylesheet" type="text/css">
+	<link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="bigbox">
 		<center>
-			<a href="https://puranzhang.me"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
+			<a href="/index.html"><img src="../static/Puran%20Zhang@2x.png" width="220"></a><br>
 			<nav>
 				<ul class="dropdown">
                     <li>
-						<a class="btn" href="https://puranzhang.me/files/resume.pdf">Resume</a>
+						<a class="btn" href="../files/resume.pdf">Resume</a>
 					</li>
 					<li>
 						<a class="btn" href="https://github.com/puranzhang">Github</a>
@@ -25,7 +25,7 @@
 						<a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
 					</li>
 					<li>
-						<a class="btn" href="/About">About</a>
+						<a class="btn" href="/about">About</a>
 					</li>
 <!--
                     <li>
