--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
             This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.
         </p>
         <p>
-            I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a> and yet can't resist it. Please reach me at <em>pz75 at cornell dot edu</em>.
+            I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>pz75 at cornell dot edu</em>.
         </p>
         <p style="text-align: center;">
             &bull; &nbsp; &bull; &nbsp; &bull;
