--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 		</center>
 		<hr>
         <br>
-        <h2 style="color: #68d">About <span class="lighttext">me</span></h2>
+        <h2>About <span class="lighttext">me</span></h2>
         <p>
             This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.
         </p>
