--- a/about/about.html
+++ b/about/about.html
@@ -25,7 +25,7 @@
 						<a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
 					</li>
 					<li>
-						<a class="btn" href="/about">About</a>
+						<a class="btn" href="/about/about.html">About</a>
 					</li>
 <!--
                     <li>
