--- a/files/dataViz/movieViz/index.html
+++ b/files/dataViz/movieViz/index.html
@@ -204,7 +204,7 @@
       // word cloud color scale
       var wordColorScale = d3.scaleLinear()
                           .domain([0,1,2,3,4,5,6,10,15,20,100])
-                          .range(["#ccdbe1", "#b7c5ca", "#a3afb4", "#8e999d", "#7a8387", "#666d70", "#51575a", "#3d4143", "#282b2d"]);
+                          .range(["#dbdbdb", "#d7d7d7", "#c3c3c3", "#afafaf", "#9b9b9b", "#878787", "#737373", "#5f5f5f", "#4b4b4b"]);
 
       // function that plots each given word list into "cloud form", referencing http://bl.ocks.org/ericcoopey/6382449
       function drawCloud(words) {
