update movie dataviz project

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 		<hr>
         <br>
         
+        <h2><a href="https://puranzhang.me/files/dataViz/movieViz/">Movie <span class="lighttext">DataViz</span></a></h2><a href="https://puranzhang.me/files/dataViz/movieViz/">
+		<div id="moviebanner"></div></a><br>
+		<br>
 		<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2><a href="https://github.com/puranzhang/chat-app">
 		<div id="ktoebanner"></div></a><br>
 		<br>
