update banner format

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="bigbox">
 		<center>
-			<a href="/index.html"><img src="/static/Puran%20Zhang@2x.png" width="220"></a><br>
+			<a href="/index.html"><img src="/static/Puran%20Zhang@2x.svg" width="220"></a><br>
 			<nav>
 				<ul class="dropdown">
                     <li>
