update rabbling storyline

--- a/files/dataViz/rabbling/index.html
+++ b/files/dataViz/rabbling/index.html
@@ -128,7 +128,7 @@
         <div class="split-section slide" id="31L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#CA0020">Reg</font><font color="#F4A582">res</font><font color="#0571B0">sio</font><font color="#92C5DE">n</font></span><br>
           <br>
-          When we look into mother`s education we found the comprehension is in proportion with the education, that is, the higher the mother achieves academically, the better the babies comprehend vocabulary. This may be interpreted in the way that the mothers with higher academic level are more likely to consider early education important, thus pays more attention to developing children`s comprehension.</p>
+          As stated and shown, we learn words in different manners. On the right are four cubic polinomial regression lines that show the learning rates of <font color="#ca0020">nouns</font>, <font color="#0571b0">functon words</font>, <font color="#f4a582">predicates</font> and <font color="#92c5de">others</font>.</p>
         </div>
 
 
