--- a/files/dataViz/rabbling/index.html
+++ b/files/dataViz/rabbling/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>Rabbling - Puran Zhang (pz75), Jiangjie Man (jm2559), Pengcheng Zhang (pz84), Xiuyan Xin (xx254)</title>
+  <title>Rabbling</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
