fix https issue

--- a/files/dataViz/rabbling/index.html
+++ b/files/dataViz/rabbling/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/jquery.ScrollMagic.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="lib/plot.js"></script>
   <script src="lib/regression.min.js"></script>
@@ -33,15 +33,12 @@
           <i>"R", for "read"; "abbling", for "babbling".</i> We coined <i>"rabbling"</i> for our title to deconstruct the way babies learn language. Here we will show you when and how a baby learn to "rabble" a story that "flies" on the right.</p>
         </div>
 
-
         <div class="split-section slide" id="profile2">
           <p><img alt="stage1" src="data/static/book.svg" style="width:500px;height:150px;">
           </p>
         </div>
 
-
         <div class="split-section slide" id="16L"><font style="font-size:30px;font-weight:bold;">16 Months</font> <img alt="stage3" src="data/static/stage2.svg" style="width:304px;height:150px;"></div>
-
 
         <div class="split-section slide" id="17L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;17 Months</span><br>
@@ -49,16 +46,13 @@
           After immersing in human language for several months, most babies have passed the stage where they are only able to use one or more words/fragments with meaning. They have vocabulary of approximately 5-20 words that are made up chiefly of <font color="#CA0020">nouns</font>. They might repeat a word or phrase over and over.</p>
         </div>
 
-
         <div class="split-section slide" id="18L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18 Months</span><br>
           <br>
           They might repeat a word or phrase over and over. At this age, they produce much jargon with emotional content and are able to follow simple commands (really simple).</p>
         </div>
 
-
         <div class="split-section slide" id="19L"><font style="font-size:30px;font-weight:bold;">19 Months</font> <img alt="stage3" src="data/static/stage3.svg" style="width:304px;height:228px;"></div>
-
 
         <div class="split-section slide" id="20L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;20 Months</span><br>
@@ -66,16 +60,13 @@
           After months of training, babies can now name a number of objects common to his surroundings and are able to use at least two <font color="#92C5DE">prepositions</font>, usually chosen from the following: "in", "on", "under".</p>
         </div>
 
-
         <div class="split-section slide" id="21L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;21 Months</span><br>
           <br>
           They can combine words into a short sentence with an average length of 1.2 words. Approximately 60&percnt; of what most babies say should be intelligible although their rhythm and fluency are often poor.</p>
         </div>
 
-
         <div class="split-section slide" id="22L"><font style="font-size:30px;font-weight:bold;">22 Months</font> <img alt="stage4" src="data/static/stage4.svg" style="width:304px;height:228px;"></div>
-
 
         <div class="split-section slide" id="23L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23 Months</span><br>
@@ -83,13 +74,11 @@
           Approaching two years old, babies' vocabulary grow to approximately 150 - 300 words, yet their volume and pitch of voice are not yet well-controlled.</p>
         </div>
 
-
         <div class="split-section slide" id="24L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;24 Months</span><br>
           <br>
           They can now use <font color="#0571B0">pronouns</font> like "I", "me" and "you", although me and I are often confused. "My" and "mine" begin to emerge, and babies can responds to such commands as “show me your eyes (nose, mouth, hair)”.</p>
         </div>
-
 
         <div class="split-section slide" id="25L"><font style="font-size:30px;font-weight:bold;">25 Months</font> <img alt="stage5" src="data/static/stage5.svg" style="width:304px;height:228px;"></div>
 
@@ -100,16 +89,13 @@
           At this age, they start to use some past tenses and plurals, and know at least three prepositions, usually "in", "on", "under". They can now differentiate "I" and "me"!</p>
         </div>
 
-
         <div class="split-section slide" id="27L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;27 Months</span><br>
           <br>
           As building their vocabulary, they can handle three-word sentence easily. Body become familiar to them as they know chief parts of body and can indicate these if not name them.</p>
         </div>
 
-
         <div class="split-section slide" id="28L"><font style="font-size:30px;font-weight:bold;">28 Months</font> <img alt="stage6" src="data/static/stage6.svg" style="width:304px;height:228px;"></div>
-
 
         <div class="split-section slide" id="29L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;29 Months</span><br>
@@ -117,13 +103,11 @@
           Now babies grow their vocabulary to 900 to 1000. About 90&percnt; of what child says should be intelligible. <font color='#F4A582'>Verbs and predicates</font> begin to predominate their language.</p>
         </div>
 
-
         <div class="split-section slide" id="30L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;30 Months</span><br>
           <br>
           They now understand most simple questions dealing with their environment and activities. They are able to relate their experiences so that reasoning can be followed. Of course, most of them now <font color="#FFF669">can read the story on the right</font>.</p>
         </div>
-
 
         <div class="split-section slide" id="31L">
           <p><span style="font-size:30px;font-weight:bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#CA0020">Reg</font><font color="#F4A582">res</font><font color="#0571B0">sio</font><font color="#92C5DE">n</font></span><br>
@@ -131,13 +115,10 @@
           As stated and shown, we learn words in different manners. On the right are four cubic polinomial regression lines that show the learning rates of <font color="#ca0020">nouns</font>, <font color="#0571b0">functon words</font>, <font color="#f4a582">predicates</font> and <font color="#92c5de">others</font>.</p>
         </div>
 
-
         <div class="split-section slide" id="32L">
           <p>We can see that nouns are acquired quicker than others since we get to know concrete objects earlier than others; Then come types such as prepositions; Function words (eg. pronouns) follow since we start to make sense of relationships of objects; Finally we learned predicates and verbs because actions become much more available and interesting to us than before.</p>
         </div>
-        
       </div>
-
 
       <div class="split-right" id="rightPanel">
         <div class="split-section" id="rightFly">
