--- a/files/dataViz/movieViz/index.html
+++ b/files/dataViz/movieViz/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>The Century of Movies</title>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Crimson+Text">
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <!-- Using d3 cloud library from https://github.com/jasondavies/d3-cloud. -->
-<script src="wordCloud.js"></script>
+<script src="wordCloud.min.js"></script>
 <style>
   body {
     background-color: #29262D;
