clean up style and structure

--- a/index.html
+++ b/index.html
@@ -1,59 +1,86 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta content="Puran Zhang's web." name="description">
-	<title>Puran Zhang</title>
-	<link href="static/木勺logo.png" rel="shortcut icon">
-	<!-- Style is credited to https://www.mowglii.com -->
-	<link href="style.css" rel="stylesheet" type="text/css">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="Puran Zhang's web." name="description">
+
+  <title>Puran Zhang</title>
+  <link href="static/木勺logo.png" rel="shortcut icon">
+  <!-- Style is credited to https://www.mowglii.com -->
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-	<div id="bigbox">
-		<center>
-			<a href="index.html"><img src="static/puranzhang@2x.svg" width="220"></a><br>
-			<nav>
-				<ul class="dropdown">
+  <div id="bigbox">
+    <center>
+      <a href="index.html"><img src="static/puranzhang@2x.svg" width="220"></a><br>
+
+      <nav>
+        <ul class="dropdown">
+          <li>
+            <a class="btn" href="files/resume.pdf">Resume</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="https://github.com/puranzhang">Github</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="about.html">About</a>
+          </li>
+          <!--
                     <li>
-						<a class="btn" href="files/resume.pdf">Resume</a>
-					</li>
-					<li>
-						<a class="btn" href="https://github.com/puranzhang">Github</a>
-					</li>
-					<li>
-						<a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
-					</li>
-                    <li>
-						<a class="btn" href="about.html">About</a>
-					</li>
-<!--
-                    <li>
-						<a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
-					</li>
+                        <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
+                    </li>
 -->
-				</ul>
-			</nav>
-		</center>
-		<hr>
-        <br>
-        
-		<h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a></h2><a href="https://github.com/puranzhang/chat-app">
-		<div id="ktoebanner"></div></a><br>
-		<br>
-		<h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a></h2><a href="https://github.com/puranzhang/game_database">
-		<div id="rpgbanner"></div></a><br>
-		<br>
-        <h2><a href="files/dataViz/rabbling/">R<span class="lighttext">abbling</span></a></h2><a href="files/dataViz/rabbling/">
-		<div id="rabblingbanner"></div></a><br>
-		<br>
-		<h2><a href="files/dataViz/movieViz/">Movie <span class="lighttext">DataViz</span></a></h2><a href="files/dataViz/movieViz/">
-		<div id="moviebanner"></div></a><br>
-		<br>
-		<!--
+        </ul>
+      </nav>
+    </center>
+
+    <hr>
+    <br>
+
+    <h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a>
+    </h2>
+    <a href="https://github.com/puranzhang/chat-app">
+    <div id="ktoebanner">
+    </div></a><br>
+    <br>
+
+    <h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a>
+    </h2>
+    <a href="https://github.com/puranzhang/game_database">
+    <div id="rpgbanner">
+    </div></a><br>
+    <br>
+
+    <h2><a href="files/dataViz/rabbling/">R<span class="lighttext">abbling</span></a>
+    </h2>
+    <a href="files/dataViz/rabbling/">
+    <div id="rabblingbanner">
+    </div></a><br>
+    <br>
+
+    <h2><a href="files/dataViz/movieViz/">Movie <span class="lighttext">DataViz</span></a>
+    </h2>
+    <a href="files/dataViz/movieViz/">
+    <div id="moviebanner">
+    </div></a><br>
+    <br>
+    <!--
     <hr/>
     <p><a class="btn" href="/contact">Contact</a></p>
     -->
-	</div><br>
+  </div>
+  <br>
 </body>
 </html>
