--- a/about.html
+++ b/about.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta content="Puran Zhang's web." name="description">
-	<title>Puran Zhang</title>
-	<link href="static/木勺logo.png" rel="shortcut icon">
-	<!-- Style is credited to https://www.mowglii.com -->
-	<link href="style.css" rel="stylesheet" type="text/css">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="Puran Zhang's web." name="description">
+
+  <title>Puran Zhang</title>
+  <link href="static/木勺logo.png" rel="shortcut icon">
+  <!-- Style is credited to https://www.mowglii.com -->
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-	<div id="bigbox">
-		<center>
-			<a href="index.html"><img src="static/puranzhang@2x.svg" width="220"></a><br>
-			<nav>
-				<ul class="dropdown">
+  <div id="bigbox">
+    <center>
+      <a href="index.html"><img src="static/puranzhang@2x.svg" width="220"></a><br>
+
+      <nav>
+        <ul class="dropdown">
+          <li>
+            <a class="btn" href="files/resume.pdf">Resume</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="https://github.com/puranzhang">Github</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
+          </li>
+
+
+          <li>
+            <a class="btn" href="about.html">About</a>
+          </li>
+          <!--
                     <li>
-						<a class="btn" href="files/resume.pdf">Resume</a>
-					</li>
-					<li>
-						<a class="btn" href="https://github.com/puranzhang">Github</a>
-					</li>
-					<li>
-						<a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
-					</li>
-					<li>
-						<a class="btn" href="about.html">About</a>
-					</li>
-<!--
-                    <li>
-						<a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
-					</li>
+                        <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
+                    </li>
 -->
-				</ul>
-			</nav>
-		</center>
-		<hr>
-        <br>
-        <h2>About <span class="lighttext">me</span></h2>
-        <p>
-            This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.
-        </p>
-        <p>
-            I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>pz75 {at} cornell {dot} edu</em>.
-        </p>
-        <p style="text-align: center;">
-            &bull; &nbsp; &bull; &nbsp; &bull;
-        </p>
-	</div><br>
+        </ul>
+      </nav>
+    </center>
+
+    <hr>
+    <br>
+
+    <h2>About <span class="lighttext">me</span></h2>
+
+    <p>This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.</p>
+
+    <p>I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>pz75 {at} cornell {dot} edu</em>.</p>
+
+    <p style="text-align: center;">&bull; &nbsp; &bull; &nbsp; &bull;</p>
+  </div>
+  <br>
 </body>
 </html>
