update project page url

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
     <h2><a href="https://puranzhang.me/rabbling">R<span class="lighttext">abbling</span></a>
     </h2>
-    <a href="files/dataViz/rabbling/">
+    <a href="https://puranzhang.me/rabbling">
     <div id="rabblingbanner">
     </div></a><br>
     <br>
 
     <h2><a href="https://puranzhang.me/century-of-movie">Movie <span class="lighttext">DataViz</span></a>
     </h2>
-    <a href="files/dataViz/movieViz/">
+    <a href="https://puranzhang.me/century-of-movie">
     <div id="moviebanner">
     </div></a><br>
     <br>
