--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
     <h2>About <span class="lighttext">me</span></h2>
 
-    <p>This is Puran. I'm currently finishing my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.</p>
+    <p>This is Puran. I recently finished my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.</p>
 
     <p>I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>pz75 {at} cornell {dot} edu</em>.</p>
 
