add meta report section on hompage

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <hr>
     <br>
     
+    <h2><a href="https://puranzhang.me/metareport/">Meta report<span class="lighttext"> of Transparency</span></a>
+    </h2>
+    <a href="https://puranzhang.me/metareport/">
+    <div id="metaReportbanner">
+    </div></a><br>
+    <br>
+    
     <h2><a href="https://puranzhang.me/rabbling">R<span class="lighttext">abbling</span></a>
     </h2>
     <a href="https://puranzhang.me/rabbling">
