--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <br>
     
-    <h2><a href="https://puranzhang.me/metareport/">Meta report<span class="lighttext"> of Transparency</span></a>
+    <h2><a href="https://puranzhang.me/metareport/">Meta-report<span class="lighttext"> of Transparency</span></a>
     </h2>
     <a href="https://puranzhang.me/metareport/">
     <div id="metaReportbanner">
