change page head content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Puran Zhang's web." name="description">
+  <meta content="Halo, this is Puran." name="description">
 
   <title>Puran Zhang</title>
   <link href="static/木勺logo.png" rel="shortcut icon">
