--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+  <!-- Google verify -->
+  <meta name="google-site-verification" content="BmyBlqbNWN7f_72bc5lWvLVkwW6XRbULWa-tT7wu9-w" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Halo, this is Puran." name="description">
