updated bangumiN banner and resume

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     <hr>
     <br>
     
+    <h2><a href="https://bangumin.tv/">Bangumi<span class="lighttext">N</span></a>
+    </h2>
+    <a href="https://bangumin.tv/">
+    <div id="banguminbanner">
+    </div></a><br>
+    <br>
+
     <h2><a href="https://puranzhang.me/metareport/">Meta-report<span class="lighttext"> of Transparency</span></a>
     </h2>
     <a href="https://puranzhang.me/metareport/">
