Refined dark mode styling.

--- a/about.html
+++ b/about.html
@@ -51,9 +51,8 @@
 
     <h2>About <span class="lighttext">me</span></h2>
 
-    <p>This is Puran. I recently finished my master program in <a href="http://infosci.cornell.edu">Information Science</a> at Cornell University.</p>
-
-    <p>I graduated from <a href="http://richmond.edu">University of Richmond</a> in May 2016, double-majoring in Mathematics and Psychology with a minor in Computer Science. I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>pz75 {at} cornell {dot} edu</em>.</p>
+    <p>This is Puran. I currently work as a software engineer in greater LA area. I had my master degree in <a href="http://infosci.cornell.edu">Information Science</a> at <em>Cornell University</em>. Before that, I finished my undergrad, double-majoring in Mathematics and Psychology with a minor in Computer Science, at <em>University of Richmond</em>.</p>
+    <p>I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>puranzhang {at} gmail {dot} com</em>.</p>
 
     <p style="text-align: center;">&bull; &nbsp; &bull; &nbsp; &bull;</p>
   </div>
