--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
 
           <li>
-            <a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
+            <a class="btn" href="https://www.linkedin.com/in/puranzhang/">Linkedin</a>
           </li>
 
           <li>
