Updated about page.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -8,7 +7,7 @@
 
   <title>Puran Zhang</title>
   <link href="static/木勺logo.png" rel="shortcut icon">
-  <!-- Style is credited to https://www.mowglii.com -->
+  <!-- Style credited to https://www.mowglii.com -->
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -22,26 +21,18 @@
           <li>
             <a class="btn" href="files/resume.pdf">Resume</a>
           </li>
-
-
           <li>
             <a class="btn" href="https://github.com/puranzhang">Github</a>
           </li>
-
-
-          <li>
-            <a class="btn" href="https://www.linkedin.com/in/puran-zhang-41ba7758">Linkedin</a>
-          </li>
-
-
+          <!-- <li>
+            <a class="btn" href="https://www.linkedin.com/in/puranzhang/">Linkedin</a>
+          </li> -->
           <li>
             <a class="btn" href="about.html">About</a>
           </li>
-          <!--
-                    <li>
-                        <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
-                    </li>
--->
+          <li>
+            <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
+          </li>
         </ul>
       </nav>
     </center>
@@ -51,8 +42,13 @@
 
     <h2>About <span class="lighttext">me</span></h2>
 
-    <p>This is Puran. I currently work as a software engineer in greater LA area. I had my master degree in <a href="http://infosci.cornell.edu">Information Science</a> at <em>Cornell University</em>. Before that, I finished my undergrad, double-majoring in Mathematics and Psychology with a minor in Computer Science, at <em>University of Richmond</em>.</p>
-    <p>I'm both benefiting and suffering from overwhelming <a href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it. Please reach me at <em>puranzhang {at} gmail {dot} com</em>.</p>
+    <p>This is Puran. I currently work as a software engineer in greater LA area. I had my master degree in <a
+        href="http://infosci.cornell.edu">Information Science</a> at <em>Cornell University</em>. Before that, I
+      finished my undergrad, double-majoring in Mathematics and Psychology with a minor in Computer Science, at
+      <em>University of Richmond</em>.</p>
+    <p>I'm both benefiting and suffering from overwhelming <a
+        href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it.
+      Please reach me at <em>puranzhang {at} gmail {dot} com</em>.</p>
 
     <p style="text-align: center;">&bull; &nbsp; &bull; &nbsp; &bull;</p>
   </div>
