--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
 <html>
+
 <head>
   <!-- Google verify -->
   <meta name="google-site-verification" content="BmyBlqbNWN7f_72bc5lWvLVkwW6XRbULWa-tT7wu9-w" />
@@ -10,7 +10,7 @@
 
   <title>Puran Zhang</title>
   <link href="static/木勺logo.png" rel="shortcut icon">
-  <!-- Style is credited to https://www.mowglii.com -->
+  <!-- Style credited to https://www.mowglii.com -->
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -24,70 +24,71 @@
           <li>
             <a class="btn" href="files/resume.pdf">Resume</a>
           </li>
-
           <li>
             <a class="btn" href="https://github.com/puranzhang">Github</a>
           </li>
-
-          <li>
+          <!-- <li>
             <a class="btn" href="https://www.linkedin.com/in/puranzhang/">Linkedin</a>
+          </li> -->
+          <li>
+            <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
           </li>
-
           <li>
             <a class="btn" href="about.html">About</a>
           </li>
-          <!--
-                    <li>
-                        <a class="btn" href="https://www.instagram.com/puranzhang/">Instagram</a>
-                    </li>
--->
         </ul>
       </nav>
     </center>
 
     <hr>
     <br>
-    
+
     <h2><a href="https://bangumin.tv/">Bangumi<span class="lighttext">N</span></a>
     </h2>
     <a href="https://bangumin.tv/">
-    <div id="banguminbanner">
-    </div></a><br>
+      <div id="banguminbanner">
+      </div>
+    </a><br>
     <br>
 
     <h2><a href="https://puranzhang.me/metareport/">Meta-report<span class="lighttext"> of Transparency</span></a>
     </h2>
     <a href="https://puranzhang.me/metareport/">
-    <div id="metaReportbanner">
-    </div></a><br>
+      <div id="metaReportbanner">
+      </div>
+    </a><br>
     <br>
-    
+
     <h2><a href="https://puranzhang.me/rabbling">R<span class="lighttext">abbling</span></a>
     </h2>
     <a href="https://puranzhang.me/rabbling">
-    <div id="rabblingbanner">
-    </div></a><br>
+      <div id="rabblingbanner">
+      </div>
+    </a><br>
     <br>
 
     <h2><a href="https://puranzhang.me/century-of-movie">Movie <span class="lighttext">DataViz</span></a>
     </h2>
     <a href="https://puranzhang.me/century-of-movie">
-    <div id="moviebanner">
-    </div></a><br>
+      <div id="moviebanner">
+      </div>
+    </a><br>
     <br>
 
     <h2><a href="https://github.com/puranzhang/chat-app">Keep Talking <span class="lighttext">or Explodes</span></a>
     </h2>
     <a href="https://github.com/puranzhang/chat-app">
-    <div id="ktoebanner">
-    </div></a><br>
+      <div id="ktoebanner">
+      </div>
+    </a><br>
     <br>
 
     <h2><a href="https://github.com/puranzhang/game_database">Online <span class="lighttext">RPG</span></a>
     </h2>
     <a href="https://github.com/puranzhang/game_database">
-    <div id="rpgbanner">
-    </div></a><br>
+      <div id="rpgbanner">
+      </div>
+    </a><br>
     <br>
     <!--
     <hr/>
