--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
 
       <nav>
         <ul class="dropdown">
-          <li>
+          <!-- <li>
             <a class="btn" href="files/resume.pdf">Resume</a>
-          </li>
+          </li> -->
           <li>
             <a class="btn" href="https://github.com/puranzhang">Github</a>
           </li>
@@ -42,9 +42,9 @@
 
     <h2>About <span class="lighttext">me</span></h2>
 
-    <p>This is Puran. I currently work as a software engineer in greater LA area. I had my master degree in <a
+    <p>This is Puran, a front-end engineer in Seattle. I had my master degree in <a
         href="http://infosci.cornell.edu">Information Science</a> at <em>Cornell University</em>. Before that, I
-      finished my undergrad, double-majoring in Mathematics and Psychology with a minor in Computer Science, at
+      finished my undergrad, double-majored in Mathematics and Psychology with a minor in Computer Science, at
       <em>University of Richmond</em>.</p>
     <p>I'm both benefiting and suffering from overwhelming <a
         href="https://en.wikipedia.org/wiki/Curiosity#Curiosity-drive_theory">curiosity</a>, and yet can't resist it.
