Update BangumiN links

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <hr>
     <br>
 
-    <h2><a href="https://bangumin.tv/">Bangumi<span class="lighttext">N</span></a>
+    <h2><a href="https://github.com/puranzhang/BangumiN">Bangumi<span class="lighttext">N</span></a>
     </h2>
-    <a href="https://bangumin.tv/">
+    <a href="https://github.com/puranzhang/BangumiN">
       <div id="banguminbanner">
       </div>
     </a><br>
